fixed the logo position so it's no longer overlapping

--- a/template/assets/css/style.css
+++ b/template/assets/css/style.css
@@ -1029,6 +1029,7 @@ hr {
 
 .lui-section {
 	padding-bottom: 220px;
+	padding-top: 100px;
 }
 
 .disabled {
